Replaced -Djava.ext.dirs=codekvast-javaagent.jar with -Xbootclasspath/a:codekvast-javaagent.jar to avoid SSL problem.